lab1/Test/L1-A-7-59.cmm
int ;
int `;
int sImRclBDsBtS ( struct {
  int yb2AG52zfsFvhMB9w ;
  struct qbbj6hC1 {
  }MO8KstoU ;
  struct {
  }ej6ejs \;
  int sbehi6SLjZ9h , whxMbA47dkQpenuU , Il4HhSv7tRXSy2Xh 
    = c0yRgfWOmsQqX8mE4cv = hVE8ldl || vx2kL0f1vNIy4IYL7kK 
    && xzNC1Xc2bZhZe8tH == U / ( t != ablZ1ZqMt1 + H7mHuqw5na3ZVnGzs 
    * - ! QtF__088WY1S [ \I2dTpzQN_v = wvYbOKZ3t < MvUgTb2bS6UbnSFQJsKy 
    - RvT2_vuZ7bteu1OUR_n ( pC1oERpXWj4qT17T , poZw9H_vZ 
    >= gPLU6mi_86ilw5wZ <= 57238423 > 1967402723.1040196220 
    ) - - - vzsr ( ) ] . pSTl9lJ ) ;
}FiPG47H7YDv0Nz , int RCsVG0 ) {
  float Jw8l46IBpeuS0e5siF ;
}
struct NBgKh9N zmSxaKaxHtJ [ 129210064 ] , T9 

;
int ;
int QbNfAqNr8Rfpmtej ( ) {
  if ( c4zePmjqZS )   if ( _KTf5Z )   while ( EXYI 
    )   V2gDhn3xwQNMinP ;



  if ( A2_xeneVMlmyHDgEd9 )   if ( imGBZRmTaKt_eVlZnY 
    )   return dnAB1xXSpG ;
else   w ;

else   if ( B1OorBjLFGWm34 ) {
  }

}
